Test the git commit tag from the c#

--- a/force-app/main/default/classes/Hello.cls
+++ b/force-app/main/default/classes/Hello.cls
@@ -6,5 +6,6 @@ public with sharing class Hello {
     public Hello() {
         System.debug('Hello world');
         System.debug('This is debug from default constructor');
+        System.debug('This is debug from default to test git tags.');
     }
 }
